--- a/final.html
+++ b/final.html
@@ -31,15 +31,15 @@
 			</div>
 			<div class="input-block">
 				<label for="username" class="label">Fullname</label>
-				<input type="text" name="username" class="input username-input" />
+				<input type="text" name="username" placeholder="Full name" class="input username-input" />
 			</div>
 			<div class="input-block">
 				<label for="email" class="label">Email</label>
-				<input type="text" name="email" class="input email-input" />
+				<input type="text" name="email" placeholder="Email" class="input email-input" />
 			</div>
 			<div class="Suject-block">
 				<label for="text" class="label">Subject</label>
-				<input type="text" name="password" class="subject pw-input" />
+				<input type="text" name="text" placeholder="Subject" class="subject pw-input" />
 			</div>
 			<div class="input-block">
 				<input type="submit" value="Send " class="input-submit" />
